Fixed some broken css and contnet

--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -117,6 +117,10 @@ h4 {
   color:#333;
   font-weight:300;
 }
+dd > h4 {
+  color:#B5B5B5;
+}
+
 h5 {
   font-size:1em;
   color:#999;
